# autoart

./: .AGENT.md  .CLAUDE.md  .env.example  .env.production.example  .eslintrc.json  .gitignore  .npmrc  .stackit.yaml  ARCHITECTURE.md  AutoArt Refactor Implementation.md  Azure AutoArt db.session.sql  CLAUDE.md  DIFF_CHECKLIST.md  DirectoryTree.md  Implementation_Plan.md  LEGACY_AUDIT.md  PROGRESS-ISSUE-6.md  README.md  SETUP.md  architecture-inventory.md  demo-columns.html  error-log.txt  eslint.config.js  eslint.config.mjs  fix_imports.py  fix_missing_molecules.py  lint-backend.txt  lint-frontend.txt  lint-mypy-current.txt  lint-output.txt  log-learning.ts  migrate-agent-memory.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  priorities.md  quirky-bouncing-moonbeam.md  refactor_imports.py  render.yaml  (+5 more)
.aye/: .ayeignore  (+1 more)
apps/autohelper/: README.md  package.json  pyproject.toml
apps/autohelper/_collected/.artcollector/: manifest.json
apps/autohelper/autohelper/: __init__.py  app.py  main.py
apps/autohelper/autohelper/config/: __init__.py  settings.py  store.py
apps/autohelper/autohelper/db/: __init__.py  conn.py  migrate.py
apps/autohelper/autohelper/db/migrations/: 0001_init.sql  0002_add_hash_to_refs.sql  0003_file_aliases.sql  0004_mail_transient.sql  0005_artifact_collections.sql  0006_mail_triage.sql  0007_mail_body_html.sql
apps/autohelper/autohelper/db/repos/: __init__.py  file_repo.py  index_run_repo.py  root_repo.py
apps/autohelper/autohelper/gui/: __init__.py  icon.py  pairing.py  popup.py
apps/autohelper/autohelper/infra/: __init__.py
apps/autohelper/autohelper/infra/audit/: __init__.py  audit_log.py
apps/autohelper/autohelper/infra/fs/: __init__.py  hashing.py  local_fs.py  onedrive.py  path_policy.py  protocols.py
apps/autohelper/autohelper/modules/: __init__.py
apps/autohelper/autohelper/modules/config/: __init__.py  router.py
apps/autohelper/autohelper/modules/context/: __init__.py  autoart.py  monday.py  service.py
apps/autohelper/autohelper/modules/export/: __init__.py  router.py  schemas.py  service.py
apps/autohelper/autohelper/modules/filetree/: __init__.py  router.py  schemas.py  service.py
apps/autohelper/autohelper/modules/gc/: __init__.py  router.py  scheduler.py  schemas.py  service.py  types.py
apps/autohelper/autohelper/modules/gc/tasks/: __init__.py  api_cleanup.py  file_cleanup.py
apps/autohelper/autohelper/modules/health/: __init__.py  router.py  schemas.py  service.py
apps/autohelper/autohelper/modules/index/: __init__.py  router.py  schemas.py  service.py  types.py
apps/autohelper/autohelper/modules/mail/: __init__.py  draft.py  router.py  schemas.py  service.py
apps/autohelper/autohelper/modules/pairing/: __init__.py  router.py
apps/autohelper/autohelper/modules/reference/: __init__.py  router.py  schemas.py  service.py
apps/autohelper/autohelper/modules/runner/: __init__.py  autocollector.py  lookup_service.py  naming.py  router.py  service.py  types.py
apps/autohelper/autohelper/modules/runner/adapters/: __init__.py  base.py  cargo.py  default.py  gemini_deep_crawl.py  squarespace.py  wordpress.py
apps/autohelper/autohelper/modules/search/: __init__.py  router.py  schemas.py  service.py
apps/autohelper/autohelper/modules/storage/: __init__.py  base.py  manifest_backend.py  router.py  sharepoint_backend.py
apps/autohelper/autohelper/shared/: __init__.py  errors.py  ids.py  logging.py  paths.py  platform.py  time.py  types.py
apps/autohelper/autohelper/sync/: __init__.py  poller.py
apps/autohelper/data/: config.json
apps/autohelper/docs/: Integrating AutoArt Context Layer.md
apps/autohelper/scripts/: demo_tray_geometry.py  manual_verify_rename.py  setup.ps1  setup.sh
apps/autohelper/tests/: __init__.py  conftest.py  test_config_store.py  test_export.py  test_filetree.py  test_health.py  test_index_renames.py  test_indexer.py  test_mail_service.py  test_onedrive.py  test_path_policy.py  test_reference.py  test_search.py
(+1329 files in other folders)
