[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autohelper"
version = "0.1.0"
description = "Local-first Python filesystem orchestration service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "PySide6>=6.6.0",
    "qt-material>=2.14",
    # Web scraping (for autocollector runner)
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Windows-specific:
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
sharepoint = [
    # SharePoint metadata storage backend
    "Office365-REST-Python-Client>=2.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
